added logic for SM; code refactor in components

--- a/src/containers/hero/hero.css
+++ b/src/containers/hero/hero.css
@@ -1,3 +1,7 @@
+body {
+  background-color: '#ffd42d';
+}
+
 .hero-container {
   display: block;
   min-height: 100%;
@@ -31,20 +35,6 @@ a {
   text-decoration: none;
 }
 
-.cv-title{
-  margin-top: 0;
-}
-
-.cv-title-link:hover, .work-title-link:hover, .playground-title-link:hover {
-  color: #fffade;
-}
-
-.social-media {
-  width: 35px; 
-  height: 35px;
-  margin-right: 10px;
-}
-
 /*.dynamic-words {
     text-shadow: 1px 1px 1px #ffd42d,
         1px 1px 1px #ffd42d,
@@ -74,10 +64,6 @@ a {
 
   h2 {
     font-size: 3.5vw;
-  }
-
-  .cv-title-link:hover, .work-title-link:hover, .playground-title-link:hover, .email-link:hover {
-    color: black;
   }
     
 }
