--- a/src/containers/hero/hero.css
+++ b/src/containers/hero/hero.css
@@ -14,6 +14,9 @@ body {
 
 .hero-container-padding {
   padding: 5rem;
+  -webkit-transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
+  -moz-transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
+  transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
 }
 
 /* .email-link:hover {
@@ -28,6 +31,12 @@ h1 {
 
 h2{
   color: black;
+}
+
+h1, h2, a {
+  -webkit-transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
+  -moz-transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
+  transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
 }
 
 a {
