--- a/src/containers/playground/playground.css
+++ b/src/containers/playground/playground.css
@@ -29,6 +29,7 @@
   color: #fffade;
   font-size: 5vw;
   font-weight: 700;
+  cursor: pointer;
 }
 
 h2.playground-category-title {
@@ -71,6 +72,7 @@ h2.playground-category-title-clicked {
   height: 8px;
   float: left;
   background-color: #fff55a;
+  margin-bottom: 10%;
 }
 
 .swiper {
@@ -104,6 +106,10 @@ h2.playground-category-title-clicked {
 }
 
 .swiper-slide img {
+  border-top-right-radius: 1.5vw;
+  border-top-left-radius: 1.5vw;
+  border-bottom-right-radius: 1.5vw;
+  border-bottom-left-radius: 1.5vw;
   display: block;
   width: 100%;
   height: 100%;
