--- a/src/containers/hero/hero.css
+++ b/src/containers/hero/hero.css
@@ -26,7 +26,7 @@ h2{
   color: black;
 }
 
-h1, h2, a {
+h1, h2, a, span {
   -webkit-transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
   -moz-transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
   transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
