--- a/src/containers/hero/hero.css
+++ b/src/containers/hero/hero.css
@@ -11,9 +11,9 @@
 
 .hero-container-padding {
   padding: 5rem;
-  -webkit-transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
+  /* -webkit-transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
   -moz-transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
-  transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
+  transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s; */
 }
 
 h1 {
@@ -26,10 +26,10 @@ h2{
   color: black;
 }
 
-h1, h2, a, span {
-  -webkit-transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
+h1, h2, a, span, img {
+  /* -webkit-transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
   -moz-transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
-  transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
+  transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s; */
 }
 
 a {
