--- a/src/containers/hero/hero.css
+++ b/src/containers/hero/hero.css
@@ -13,7 +13,7 @@
   padding: 5rem;
   /* -webkit-transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
   -moz-transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
-  transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s; */
+  transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;  */
 }
 
 h1 {
@@ -26,10 +26,10 @@ h2{
   color: black;
 }
 
-h1, h2, a, span, img {
-  /* -webkit-transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
-  -moz-transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
-  transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s; */
+h1, h2, a, span {
+  -webkit-transition: 0.55s cubic-bezier(0.52, 0.01, 0.16, 1) 0.3s;
+  -moz-transition: 0.55s cubic-bezier(0.52, 0.01, 0.16, 1) 0.3s;
+  transition: 0.55s cubic-bezier(0.52, 0.01, 0.16, 1) 0.3s;
 }
 
 a {
@@ -85,7 +85,7 @@ a {
   }
 }
 
-@media screen and (max-width: 478px) { /* Specific to this particular image */
+@media screen and (max-width: 478px) {
 
   h1 {
     font-size: 7.5vw;
