--- a/src/containers/playground/playground.css
+++ b/src/containers/playground/playground.css
@@ -1,4 +1,4 @@
-.playground-wrapper{
+main.playground-wrapper{
   display: block;
   min-height: 100%;
   width: 100%;
@@ -6,6 +6,17 @@
   position: absolute;
 	background-image: url(./../../assets/images/desktop/playground-background.jpg);
   background-size: cover;
+}
+
+main.playground-wrapper-clicked {
+  display: block;
+  min-height: 100%;
+  width: 100%;
+  height: auto;
+  position: absolute;
+	background-image: url(./../../assets/images/desktop/playground-background.jpg);
+  background-size: cover;
+  transform: scale(1)!important;
 }
 
 .playground-wrapper-padding{
@@ -59,17 +70,16 @@ span.playground-category-subtitle {
   color: #fffade;
   font-weight: 500;
 
-  
   font-size: 35%;
   position: relative;
   display: block;
 }
 
 .playground-category-arrow-down {
-  transform: rotate(-180deg);
+  /* transform: rotate(-180deg); */
 
-  transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
-  transform-style: preserve-3d;
+  /* transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+  transform-style: preserve-3d; */
 }
 
 .playground-category-arrow-up {
@@ -78,7 +88,6 @@ span.playground-category-subtitle {
   transition: -webkit-transform 300ms cubic-bezier(.77, 0, .175, 1);
   transition: transform 300ms cubic-bezier(.77, 0, .175, 1);
   transition: transform 300ms cubic-bezier(.77, 0, .175, 1), -webkit-transform 300ms cubic-bezier(.77, 0, .175, 1); */
-
 }
 
 .swiper {
@@ -86,15 +95,21 @@ span.playground-category-subtitle {
   height: 100%;
 }
 
+.swiper-wrapper {
+  transition: height 0.3s linear;
+  transition-duration: 0.5s!important;
+}
+
+.swiper-wrapper-clicked {
+  height: 320px;
+  -webkit-transition: -webkit-transform .5s linear!important;
+}
+
 .swiper-slide {
   border-top-right-radius: 1.5vw;
   border-top-left-radius: 1.5vw;
   border-bottom-right-radius: 1.5vw;
   border-bottom-left-radius: 1.5vw;
-  height: 25vw;
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
 
   /* Center slide text vertically */
   display: -webkit-box;
@@ -109,6 +124,7 @@ span.playground-category-subtitle {
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
+
 }
 
 .swiper-slide img {
@@ -120,4 +136,51 @@ span.playground-category-subtitle {
   width: 100%;
   height: 100%;
   object-fit: cover;
+
+}
+
+.carousel-img {
+  
+}
+
+.carousel-img-clicked {
+  
+}
+
+@media screen and (max-width: 591px) {
+
+  h1.playground-title {
+    font-size: 7.2vw;
+  }
+
+  h2.playground-category-title, h2.playground-category-title-clicked {
+    font-size: 7vw;
+  }
+
+  span.playground-category-subtitle, span.playground-category-subtitle-clicked {
+    font-size: 55%;
+  }
+
+  .swiper-slide img {
+    border-top-right-radius: 12px;
+    border-top-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+    border-bottom-left-radius: 12px;
+  }
+}
+
+@media screen and (max-width: 478px) {
+
+  h1.playground-title {
+    font-size: 7.5vw;
+  }
+
+  h2.playground-category-title, h2.playground-category-title-clicked {
+    font-size: 7vw;
+  }
+
+  span.playground-category-subtitle, span.playground-category-subtitle-clicked {
+    font-size: 60%;
+  }
+
 }
