--- a/src/containers/playground/playground.css
+++ b/src/containers/playground/playground.css
@@ -82,12 +82,14 @@ span.playground-category-subtitle {
   transform-style: preserve-3d; */
 }
 
-.playground-category-arrow-up {
+.playground-category-arrow {
   float: right;
   /* -webkit-transition: -webkit-transform 300ms cubic-bezier(.77, 0, .175, 1);
   transition: -webkit-transform 300ms cubic-bezier(.77, 0, .175, 1);
   transition: transform 300ms cubic-bezier(.77, 0, .175, 1);
   transition: transform 300ms cubic-bezier(.77, 0, .175, 1), -webkit-transform 300ms cubic-bezier(.77, 0, .175, 1); */
+
+  /* transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; */
 }
 
 .swiper {
