--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -38,13 +38,6 @@ span.playground-category-subtitle {
   display: block;
 }
 
-.playground-category-arrow-down {
-  /* transform: rotate(-180deg); */
-
-  /* transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
-  transform-style: preserve-3d; */
-}
-
 .playground-category-arrow {
   float: right;
   /* -webkit-transition: -webkit-transform 300ms cubic-bezier(.77, 0, .175, 1);
@@ -61,13 +54,8 @@ span.playground-category-subtitle {
 }
 
 .swiper-wrapper {
-  transition: height 0.3s linear;
   transition-duration: 0.5s!important;
-}
-
-.swiper-wrapper-clicked {
-  height: 320px;
-  -webkit-transition: -webkit-transform .5s linear!important;
+  transition: 0.2s cubic-bezier(0.52, 0.01, 0.16, 1) 0.3s;
 }
 
 .swiper-slide {
@@ -102,14 +90,6 @@ span.playground-category-subtitle {
   height: 100%;
   object-fit: cover;
 
-}
-
-.carousel-img {
-  
-}
-
-.carousel-img-clicked {
-  
 }
 
 @media screen and (max-width: 591px) {
