--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -89,6 +89,18 @@ span.playground-category-subtitle {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.swiper-button-next, .swiper-button-prev {
+  color: #fffade!important;
+}
+
+.swiper-button-next:after, .swiper-button-prev:after {
+  font-size: 18px;
+  font-weight: bolder;
+}
+
+.swiper-button-next.swiper-button-disabled, .swiper-button-prev.swiper-button-disabled {
 
 }
 
