--- a/src/containers/hero/hero.css
+++ b/src/containers/hero/hero.css
@@ -18,11 +18,12 @@
 
 h1 {
   margin: 0 0;
-  font-size: 45px;
+  font-size: 4vw;
   color: black;
 }
 
-h2{
+h2 {
+  font-size: 2vw;
   color: black;
 }
 
@@ -53,6 +54,38 @@ a {
     1px 1px 1px rgba(16,16,16,0.2),
     1px 1px 1px rgba(16,16,16,0.4);
 }*/
+
+@media screen and (max-width: 1500px) {
+
+  .hero-container-padding {
+    padding: 4.5%;
+  }
+
+  h1 {
+    font-size: 45px;
+  }
+
+  h2 {
+    font-size: 25px;
+  }
+    
+}
+
+@media screen and (max-width: 1100px) {
+
+  .hero-container-padding {
+    padding: 5%;
+  }
+
+  h1 {
+    font-size: 3.5vw;
+  }
+
+  h2 {
+    font-size: 2vw;
+  }
+    
+}
 
 @media screen and (max-width: 768px) {
 
