--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,8 +1,8 @@
-/* .not-found-button{
+.portal-button{
   color: white;
   border: 2px solid white;
   border-radius: 20px;
   width: 100%;
   line-height: 200%;
   cursor: pointer;
-} */
+}
