--- a/src/containers/errors/notFound.css
+++ b/src/containers/errors/notFound.css
@@ -4,28 +4,29 @@
   width: 100%;
   height: auto;
   position: absolute;
-	background-color: #1544c0;
+	background-color: #feacbb;
 }
 
 .not-found-wrapper-padding{
-  padding: 10rem;
+  padding: 10rem 0;
 }
 
-.error-title > * {
+.error-text-title {
+  margin-top: 5%;
+}
+.error-text-title > * {
   color: white;
   text-align: center;
 }
 
-.error-title{
-  /* margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); */
+.error-title-code{
+  font-size: 5vw;
 }
 
-.error-title-code{
-  font-size: 20vw;
+.error-title-message{
+  font-size: 1vw;
+  margin-top: 0;
+  margin-bottom: 2%;
 }
 
 .button-wrapper-not-found{
@@ -35,6 +36,23 @@
   width: 14%;
   text-align: center;
   margin: auto;
+}
+
+.not-found-image-wrapper{
+  position: relative;
+  margin: 7% auto auto auto;
+  width: 22vw;
+  height: 11vw;
+}
+
+.not-found-image {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url(./../../assets/images/error/robot.png);
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 @media screen and (max-width: 1000px) {
