--- a/src/components/endless-text/endlessText.css
+++ b/src/components/endless-text/endlessText.css
@@ -1,3 +1,49 @@
-.endless-text{
-  margin: 0;
+#endless-text-wrapper {
+  overflow: hidden;
+}
+
+/*remove p*/
+.endless-text-contents {
+  width:100%;
+  padding-top: 20px;
+  margin:0 auto;
+  white-space: nowrap;
+}
+
+.endless-text {
+  display:inline-block;
+  /* Apply animation to this element */
+  -webkit-animation: scrolling-left1 20s linear infinite;
+  animation: scrolling-left1 20s linear infinite;
+}
+
+.endless-text-clone {
+  display:inline-block;
+  /* Apply animation to this element */
+  -webkit-animation: scrolling-left2 20s linear infinite;
+  animation: scrolling-left2 20s linear infinite;
+  animation-delay: 10s;
+}
+
+/* scrolling-left is continuous/repeatly text */
+@keyframes scrolling-left1 {
+  0% {transform: translateX(100%);
+      -webkit-transform: translateX(100%);}
+    100% {transform: translateX(-100%);
+        -webkit-transform: translateX(-100%);}
+}
+@keyframes scrolling-left2 {
+  0% {transform: translateX(0%);
+      -webkit-transform: translateX(0%);}
+    100% {transform: translateX(-200%);
+        -webkit-transform: translateX(-200%);}
+}
+
+@-webkit-keyframes scrolling-left1 {
+  0% {-webkit-transform: translateX(100%);}
+    100% {-webkit-transform: translateX(-100%);}
+}
+@-webkit-keyframes scrolling-left2 {
+  0% {-webkit-transform: translateX(0%);}
+    100% {-webkit-transform: translateX(-200%);}
 }
