--- a/src/components/endless-text/endlessText.css
+++ b/src/components/endless-text/endlessText.css
@@ -15,35 +15,59 @@
   /* Apply animation to this element */
   -webkit-animation: scrolling-left1 20s linear infinite;
   animation: scrolling-left1 20s linear infinite;
+  animation-fill-mode: forwards;
 }
 
 .endless-text-clone {
   display:inline-block;
   /* Apply animation to this element */
   -webkit-animation: scrolling-left2 20s linear infinite;
-  animation: scrolling-left2 20s linear infinite;
+  animation: scrolling-left2 20s linear infinite ;
   animation-delay: 10s;
+  opacity: 0;
+  animation-fill-mode: forwards;
 }
 
 /* scrolling-left is continuous/repeatly text */
 @keyframes scrolling-left1 {
-  0% {transform: translateX(100%);
-      -webkit-transform: translateX(100%);}
-    100% {transform: translateX(-100%);
-        -webkit-transform: translateX(-100%);}
+  0% {
+      transform: translateX(100%);
+      -webkit-transform: translateX(100%);
+  }
+  100% {
+      transform: translateX(-100%);
+      -webkit-transform: translateX(-100%);
+  }
 }
 @keyframes scrolling-left2 {
-  0% {transform: translateX(0%);
-      -webkit-transform: translateX(0%);}
-    100% {transform: translateX(-200%);
-        -webkit-transform: translateX(-200%);}
+  0% {
+      transform: translateX(0%);
+      -webkit-transform: translateX(0%);
+      opacity: 1;
+  }
+  100% {
+      transform: translateX(-200%);
+      -webkit-transform: translateX(-200%);
+      opacity: 1;
+  }
 }
 
 @-webkit-keyframes scrolling-left1 {
-  0% {-webkit-transform: translateX(100%);}
-    100% {-webkit-transform: translateX(-100%);}
+  0% {
+      -webkit-transform: translateX(100%);
+  }
+  100% {
+      -webkit-transform: translateX(-100%);
+  }
 }
+
 @-webkit-keyframes scrolling-left2 {
-  0% {-webkit-transform: translateX(0%);}
-    100% {-webkit-transform: translateX(-200%);}
+  0% {
+      -webkit-transform: translateX(0%);
+      opacity: 1;
+  }
+  100% {
+      -webkit-transform: translateX(-200%);
+      opacity: 1;
+  }
 }
