--- a/src/containers/hero/hero.css
+++ b/src/containers/hero/hero.css
@@ -22,6 +22,27 @@ h1 {
   color: black;
 }
 
+.dynamic-words, .intro-text-end-point {
+  font-weight: bold;
+}
+
+.intro-text-first-line, .intro-text-second-line, .intro-text-third-line {
+  margin-top: -16px;
+}
+
+.intro-text-second-line, .intro-text-third-line, .intro-text-sub-title > * {
+  font-weight: 400;
+}
+
+.intro-text-fourth-line {
+  margin-top: 10px;
+  margin-bottom: -5px;
+}
+
+.intro-text-contact-talk {
+  margin-top: -5px;
+}
+
 h2 {
   font-size: 2vw;
   color: black;
@@ -55,10 +76,20 @@ a {
     1px 1px 1px rgba(16,16,16,0.4);
 }*/
 
-@media screen and (max-width: 2600px) {
+.email-link {
+  text-align: center;
+}
+
+.go-to-email-icon {
+  width: 1.6vw;
+  height: 1.6vw;
+  margin-left: 0.5vw;
+}
+
+@media screen and (min-width: 2001px) {
 
   .hero-container-padding {
-    padding: 3%;
+    padding: 5% 10% 5% 10%;
   }
 
   h1 {
@@ -126,19 +157,28 @@ a {
   }
 
   h2 {
-    font-size: 3.5vw;
+    font-size: 3.2vw;
   }
-    
+
+  .intro-text-first-line, .intro-text-second-line, .intro-text-third-line {
+    line-height: 110%;
+    margin-top: 0;
+  }
+
+  .go-to-email-icon {
+    width: 3vw;
+    height: 3vw;
+  }
 }
 
-@media screen and (max-width: 591px) {
+@media screen and (max-width: 600px) {
 
   .hero-container-padding {
     margin-left: 1%;
   }
 
   h1 {
-    font-size: 6.9vw;
+    font-size: 7.1vw;
   }
 
   h2 {
@@ -148,16 +188,31 @@ a {
   .hero-container-padding {
     padding: 5.5%;
   }
+
+  .intro-text-fourth-line {
+    margin-bottom: 2%;
+    line-height: 110%;
+  }
+
+  .go-to-email-icon {
+    width: 20px;
+    height: 20px;
+  }
 }
 
 @media screen and (max-width: 478px) {
 
   h1 {
-    font-size: 7.5vw;
+    font-size: 8vw;
   }
 
   h2 {
-    font-size: 4.8vw;
+    font-size: 4.5vw;
   }
+
+  /* .intro-text-first-line, .intro-text-second-line, .intro-text-third-line {
+    line-height: 30px;
+    margin-top: 0;
+  } */
 
 }
