--- a/src/components/social-media/socialMedia.css
+++ b/src/components/social-media/socialMedia.css
@@ -3,3 +3,13 @@
   height: 35px;
   margin-right: 15px;
 }
+
+.social-media-mobile {
+  width: 30px;
+  height: 17px;
+  margin-right: 15px;
+}
+
+.email-not-visible {
+  display: none;
+}
