--- a/src/containers/hero/hero.css
+++ b/src/containers/hero/hero.css
@@ -1,19 +1,31 @@
 
 .hero-container {
   display: block;
-  min-height: 100%;
   width: 100%;
-  height: auto;
+  height: 100%;
   position: absolute;
-	background-image: url(./../../assets/images/desktop/hero-background.jpg);
-  background-size: cover;
+	/* background-image: url(./../../assets/images/desktop/hero-background.jpg);
+  background-size: cover; */
+  background-color: #ffda43;
 }
 
 .hero-container-padding {
   padding: 5rem;
+  height: 70%;
   /* -webkit-transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
   -moz-transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
   transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;  */
+}
+
+.content.clearfix {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-start;
+  align-content: flex-start;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
 }
 
 h1 {
@@ -149,7 +161,7 @@ a {
 @media screen and (max-width: 769px) {
 
   .hero-container-padding {
-    padding: 8%;
+    padding: 6.5%;
   }
 
   h1 {
@@ -173,10 +185,6 @@ a {
 
 @media screen and (max-width: 600px) {
 
-  .hero-container-padding {
-    margin-left: 1%;
-  }
-
   h1 {
     font-size: 7.1vw;
   }
@@ -186,7 +194,7 @@ a {
   }
 
   .hero-container-padding {
-    padding: 5.5%;
+    padding: 6.5%;
   }
 
   .intro-text-fourth-line {
