align navbar hero to the right

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -139,6 +139,7 @@
   -webkit-transition: 0.55s cubic-bezier(0.52, 0.01, 0.16, 1);
   -moz-transition: 0.55s cubic-bezier(0.52, 0.01, 0.16, 1);
   transition: 0.55s cubic-bezier(0.52, 0.01, 0.16, 1);
+  z-index: 2;
 }
 
 .mobile-menu-open > div:nth-child(1) {
@@ -297,7 +298,7 @@
 
 @media screen and (max-width: 768px) {
   .navigation-padding {
-    padding: 4% 4.5%;
+    padding: 4% 6.5%;
   }
   
   .cv-title-link:hover, .work-title-link:hover, .playground-title-link:hover, .email-link:hover {
@@ -310,5 +311,11 @@
 
   .toggle-menu-wrapper{
     display: inline-block;
+  }
+}
+
+@media screen and (max-width: 300px){
+  .navigation-padding {
+    padding: 5% 5%;
   }
 }
