--- a/src/components/social-media/socialMedia.css
+++ b/src/components/social-media/socialMedia.css
@@ -1,3 +1,11 @@
+.wrapper {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 5% 3.5%;
+  margin: 0;
+}
+
 .social-media {
   width: 35px; 
   height: 35px;
