--- a/src/components/semi-circle/semiCircle.css
+++ b/src/components/semi-circle/semiCircle.css
@@ -9,7 +9,7 @@
 .semi-circle {
   width: 100%;
   height: 100%;
-  background-color: #9657f0;
+  background-color: var(--color);
   clip-path: circle(50% at 0%);
   transform: rotate(180deg);
   box-shadow: rgb(76 70 82) 2px 2px 20px 1px inset, rgb(150 87 240) 20px 19px 20px 20px inset;
