--- a/src/components/semi-circle/semiCircle.css
+++ b/src/components/semi-circle/semiCircle.css
@@ -3,7 +3,7 @@
   width: 100px;
   position: relative;
   float: right;
-  top: -52%;
+  top: -50%;
 }
 
 .semi-circle {
@@ -17,21 +17,22 @@
 }
 
 .work-title-link.circle {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   position: absolute;
+}
+
+@media screen and (max-width: 1100px) {
+  .semi-circle-wrapper {
+    width: 85px;
+    height: 85px;
+  }
 }
 
 @media screen and (max-width: 769px) {
   .semi-circle-wrapper {
     width: 10%;
     height: 10%;
-    top: -50%;
-  }
-
-  .work-title-link.circle {
-    width: 100%;
-    height: 100%;
   }
 }
 
@@ -39,7 +40,6 @@
   .semi-circle-wrapper {
     width: 8%;
     height: 8%;
-    top: -45%;
   }
 }
 
