--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,7 +1,8 @@
 .navigation {
+  z-index: 1;
   height: 10%;
   width: 100%;
-  display: inline-block;
+  position: absolute;
 }
 
 .navigation-padding {
