--- a/src/containers/hero/hero.css
+++ b/src/containers/hero/hero.css
@@ -228,4 +228,16 @@ a {
     margin-top: 25px;
   }
 
+  .email-link {
+    text-align: center;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    margin: 0.5% 0 0 1.5%;
+  }
+    
+  .go-to-email-icon {
+    width: 100%;
+    height: 100%;
+  }
 }
