--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -96,8 +96,8 @@ span.playground-category-subtitle {
 }
 
 .swiper-button-next:after, .swiper-button-prev:after {
-  font-size: 18px;
-  font-weight: bolder;
+  font-size: 25px;
+  font-weight: 900;
 }
 
 .swiper-button-next.swiper-button-disabled, .swiper-button-prev.swiper-button-disabled {
