--- a/src/containers/playground/playground.css
+++ b/src/containers/playground/playground.css
@@ -4,8 +4,7 @@ main.playground-wrapper{
   width: 100%;
   height: auto;
   position: absolute;
-	background-image: url(./../../assets/images/desktop/playground-background.jpg);
-  background-size: cover;
+	background-color:#f99f62;
 }
 
 main.playground-wrapper-clicked {
@@ -14,8 +13,7 @@ main.playground-wrapper-clicked {
   width: 100%;
   height: auto;
   position: absolute;
-	background-image: url(./../../assets/images/desktop/playground-background.jpg);
-  background-size: cover;
+	background-color:#f99f62;
   transform: scale(1)!important;
 }
 
