--- a/src/containers/hero/hero.css
+++ b/src/containers/hero/hero.css
@@ -234,10 +234,12 @@ a {
     width: 20px;
     height: 20px;
     margin: 0.5% 0 0 1.5%;
+    z-index: -1;
   }
     
   .go-to-email-icon {
     width: 100%;
     height: 100%;
+    z-index: -1;
   }
 }
