--- a/src/containers/hero/hero.css
+++ b/src/containers/hero/hero.css
@@ -229,17 +229,14 @@ a {
   }
 
   .email-link {
-    text-align: center;
-    position: absolute;
     width: 20px;
     height: 20px;
-    margin: 0.5% 0 0 1.5%;
-    z-index: -1;
+    z-index: 0;
+    top: 0.5vw;
+    left: 0.5vw;
   }
     
   .go-to-email-icon {
-    width: 100%;
-    height: 100%;
-    z-index: -1;
+    z-index: 0;
   }
 }
