carousel css fix

--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -20,6 +20,10 @@ h2.playground-category-title {
   font-weight: 700;
 }
 
+h2.playground-category-title, h2.playground-category-title-clicked {
+  margin-bottom: 0;
+}
+
 span.playground-category-subtitle-clicked {
   color: #fff55a;
   font-weight: 500;
