weird carousel effect on click fixed

--- a/src/containers/playground/playground.css
+++ b/src/containers/playground/playground.css
@@ -5,6 +5,7 @@ main.playground-wrapper{
   height: auto;
   position: absolute;
 	background-color:#f99f62;
+  transform: scale(1)!important;
 }
 
 main.playground-wrapper-clicked {
