--- a/src/components/arrow-back/arrowBack.css
+++ b/src/components/arrow-back/arrowBack.css
@@ -104,8 +104,8 @@
 
 @media screen and (max-width: 768px) {
   .corner-project-back {
-    top: 2.5%;
-    right: 3%;
+    top: 20px;
+    right: 20px;
   }
 
   .lone-arrow span.text-back {
