--- a/src/containers/playground/playground.css
+++ b/src/containers/playground/playground.css
@@ -1,9 +1,12 @@
 main.playground-bg{
 	background-color:#f99f62;
+  min-height: 100%;
+  width: 100%;
+  position: absolute;
+  height: auto;
 }
 
 section.playground-wrapper{
-  display: block;
   min-height: 100%;
   width: 100%;
   height: auto;
@@ -13,7 +16,6 @@ section.playground-wrapper{
 }
 
 section.playground-wrapper-clicked {
-  display: block;
   min-height: 100%;
   width: 100%;
   height: auto;
@@ -58,7 +60,7 @@ section.playground-wrapper-clicked {
   }
 
   h2.playground-sub-title {
-    font-size: 3.8vw;
+    font-size: 3vw;
   }
 
   .playground-category-btn {
